--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.4"
-hyper = "1.6.0"
-once_cell = "1.21.3"
-tokio = { version = "1.46.1", features = ["full"] }
-tower = "0.5.2"
-tower-http = { version = "0.6.6", features = ["fs", "trace"] }
+tokio = { version = "1", features = ["full"] }
+hyper = { version = "0.14", features = ["full"] }
+multer = "2.0"
+tokio-util = { version = "0.7", features = ["io"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+bytes = "1.4"
+mime_guess = "2.0.5"
+sanitize-filename = "0.6.0"
