--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,7 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-hyper = { version = "0.14", features = ["full"] }
-multer = "2.0"
-tokio-util = { version = "0.7", features = ["io"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-bytes = "1.4"
-mime_guess = "2.0.5"
-sanitize-filename = "0.6.0"
+hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
+async-trait = "0.1"
+
+smn_web_core = "=0.1.6"
