--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ smn_web_core = "=0.1.7"
 serde = {version="1.0.219", features=["derive"]}
 serde_json = "1.0.142"
 urlencoding = "2.1.3"
+pulldown-cmark = "0.10"
