Add new projects and update existing project information
- Added "Development" and "Technical Art" projects to the project list.
- Added project info JSON for the "Development" project.
- Updated project info for "Alchemist's Convoy" and "Game Design" to change image formats from PNG to JPG.
- Modified project info for "SmnPlace: Fixer" to update its state from "Complete" to "Playable" and change image formats.
- Created markdown documentation for "SmnPlace: Fixer" project.
- Added project info JSON for "Technical Art" project.
- Created markdown documentation for "Technical Art" project.
- Updated HTML template for project pages to improve layout and accessibility.
- Refactored Rust code for better project management and HTML generation.
- Replaced PNG images with JPG versions for better performance.
- Enhanced mobile styles for better usability and accessibility.

--- a/data/displayProjectList.json
+++ b/data/displayProjectList.json
@@ -15,6 +15,16 @@
                     "children": []
                 }
             ]
+        },
+        {
+            "name": "Development",
+            "path": "/projects/development",
+            "children": []
+        },
+        {
+            "name": "Technical Art",
+            "path": "/projects/technical_art",
+            "children": []
         }
     ]
 }
